--- a/MTP app/app/views/test.scala.html
+++ b/MTP app/app/views/test.scala.html
@@ -1,28 +1,39 @@
-@(ProcessModel: String, title: String, workArea: Html)
+@(ProcessModel: String, title: String, workArea: Html, relatedDocumentsView: String)
 
 <!DOCTYPE html>
 <html>
     <head>
         <title>@title</title>		
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/jquery-ui.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery-ui.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/arrows.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
         <script type="text/javascript">
-        	/*window.onload = function(){
-        		var cArrow = $cArrows('#CommonParent').arrow('#A1', '#A2');
-        	}*/
+	        $(function() {
+	            $( "#ProcessModelContainer" ).draggable();
+	         });
         </script>
     </head>
     <body>
-	    <div id="ProcessModelBorder">
-	    	<div id="ProcessModelContainer">
-	    		@Html(ProcessModel)
-	    	</div>
-	    </div>
-	    <div>
-	    	@workArea
-	    </div>
+    	<div id="Content">
+	    	<div id="ProcessModelBorder">
+		    	<div id="ProcessModelContainer">
+		    		@Html(ProcessModel)
+		    	</div>
+		    </div>
+		    <div id="navBar">
+		    	<a href="/test?action=back">Previous step</a> -
+		    	<a href="/test">Next step</a>
+		    </div>
+		    <div id="workArea">
+		    	@workArea
+		    </div>
+		    <div id="relatedDocumentsView">
+		    	@Html(relatedDocumentsView)
+		    </div>
+    	</div>
     </body>
 </html>
