--- a/MTP app/public/stylesheets/main.css
+++ b/MTP app/public/stylesheets/main.css
@@ -1,11 +1,55 @@
 /* Main css file */
 
+body{
+	font-family: Arial;
+	font-size: 14px;
+	background-color: #EEE;
+}
+
+#Content{
+	margin-left: auto;
+	margin-right: auto;
+	display: table;
+	background-color: #FFFFFF;
+	padding: 20px;
+	min-height: 700px;
+}
+
+#navBar{
+	margin: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	display: table;
+}
+
+#workArea{
+	border: 1px solid grey;
+	border-radius: 4px;
+	padding: 20px;
+	width: 430px;
+	display: inline-block;
+	float: left;
+}
+
+#relatedDocumentsView{
+	border: 1px solid grey;
+	border-radius: 4px;
+	padding: 20px;
+	width: 220px;
+	display: inline-block;
+	float: right;
+}
+
+#ProcessModelContainer{
+	cursor: move;
+}
+
 #ProcessModelBorder{
 	border: 1px solid grey;
 	border-radius: 5px;
 	
 	overflow: auto;
-	width: 600px;
+	width: 700px;
 	height: 150px;	
 	padding: 20px;
 }
@@ -23,7 +67,19 @@
 }
 
 .Gateway{
+	border: none;
+}
+
+.Gateway::after{
+	display: inline-block;
+	position: absolute;
+	left: 8px;
+	top: -10px;
+	width: 40px;
+	height: 40px;
+	transform: rotate(45deg);
 	border: 1px solid black;
+	content: "";
 }
 
 .Event{
