Styling and Fixes

--- a/MTP app/app/views/test.scala.html
+++ b/MTP app/app/views/test.scala.html
@@ -29,9 +29,15 @@
 		    	<a href="/test">Next step</a>
 		    </div>
 		    <div id="workArea">
+		    	<div>
+		    		Tasks:
+		    	</div>
 		    	@workArea
 		    </div>
 		    <div id="relatedDocumentsView">
+		    	<div>
+		    		Related Business Objects:
+		    	</div>
 		    	@Html(relatedDocumentsView)
 		    </div>
     	</div>
