--- a/MTP app/app/views/defaultView.scala.html
+++ b/MTP app/app/views/defaultView.scala.html
@@ -1,8 +1,8 @@
 <div>
-	<span>Feld 1:</span><input />
+	<span>Email:</span><input />
 </div>
 
 <div>
-	<span>Feld 2:</span><textarea></textarea>
+	<span>Personal ID:</span><input />
 </div>
 
