--- a/MTP app/app/views/end.scala.html
+++ b/MTP app/app/views/end.scala.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 	    <div>
-	    	Congrats you finished: @processName ! <a href="/test?action=create&process=@processId">Restart</a>
+	    	Congrats you finished: @processName ! <a href="/?action=create&process=@processId">Restart</a>
 	    </div>
     </body>
 </html>
