--- a/MTP app/app/views/test.scala.html
+++ b/MTP app/app/views/test.scala.html
@@ -25,8 +25,8 @@
 		    	</div>
 		    </div>
 		    <div id="navBar">
-		    	<a href="/test?action=back">Previous step</a> -
-		    	<a href="/test">Next step</a>
+		    	<a href="/?action=back">Previous step</a> -
+		    	<a href="/">Next step</a>
 		    </div>
 		    <div id="workArea">
 		    	<div>
